# Auth_service_by_phone_number

./: Auth Service API.postman_collection.json  Dockerfile  README.md  docker-compose.yml  env.simple  pyproject.toml  run_cron_jobs.sh
config/: settings.py  urls.py
users/: cron.py  decorators.py  models.py  serializers.py  services.py  tests.py  urls.py  views.py  web_urls.py  web_views.py
users/management/commands/: create_superuser.py
users/migrations/: 0001_initial.py  0002_remove_verificationcode_user_and_more.py  0003_alter_user_used_invite_code.py
users/templates/users/: profile.html  register.html  verify.html
